(fix) solucionado conflicto